<resources>
    <string name="app_name">IrkiLife</string>
    <string name="dlasdl_akdlsaklakfdl_kfd">dlasdl;akdlsaklakfdl;kfd</string>
    <string name="to_next_btn">Далее</string>
    <string name="todo">TODO</string>
    <string name="play_menu">Играть</string>
    <string name="places">Твои места</string>
    <string name="Music">Музыка</string>
    <string name="English">Английский</string>
    <string name="Russian">Русский</string>
    <string name="language">Язык</string>
    <string name="Menu">Меню</string>
    <string name="congratulation">Ты молодец!</string>
    <string name="ywin">Поздравляем, ты прошел уровень.</string>
    <string name="result_of_level">Твой результат</string>
    <string name="To_menu">В меню</string>
    <string name="people">Личности</string>
    <string name="history">История</string>
    <string name="symbol">Символы</string>
    <string name="Baikal">Байкал</string>
    <string name="irkilife">IrkiLife</string>
    <string name="first_lvl">Уровень 1</string>
    <string name="second_lvl">Уровень 2</string>
    <string name="third_lvl">Уровень 3</string>
    <string name="Suggest">Пожелания и замечания</string>
    <string name="Send">Отправить</string>
</resources>