<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndOfLevelPeople"
    android:orientation="vertical"
    android:background="@drawable/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="20dp"
        android:text="@string/congratulation"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/oswald"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ywin"
        android:textAlignment="center"
        android:textSize="19sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/oswald"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/result_of_level"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:id="@+id/result_of_level_text"
            android:fontFamily="@font/oswald"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/result_of_level_text"
            android:textSize="18sp"
            android:id="@+id/result_of_level_int"
            android:fontFamily="@font/oswald"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/present"
        android:text=""
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to_menu_btn_from_win"
        android:text="@string/To_menu"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/oswald"
        android:background="@drawable/to_menu_gradient"
        android:textColor="@color/white"

        />



</LinearLayout>