<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity"
    android:orientation="vertical"
    android:background="@drawable/forest">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/first_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="290dp"
            android:text="@string/first_lvl"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/results_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_toRightOf="@+id/first_num"
            android:layout_marginLeft="200dp"

            android:text=""
            android:textColor="@color/white"
            android:textSize="24sp" />


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/second_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/second_lvl"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/results_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/second_num"
            android:layout_marginLeft="200dp"

            android:text=""
            android:textColor="@color/white"
            android:textSize="24sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/third_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/third_lvl"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/results_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/third_num"
            android:layout_marginLeft="200dp"

            android:text=""
            android:textColor="@color/white"
            android:textSize="24sp" />


    </RelativeLayout>


</LinearLayout>